ini-persist/tests/compile-fail/conflicting_rename.stderr
error: duplicate ini attribute `rename`
 --> tests/compile-fail/conflicting_rename.rs:6:11
  |
6 |     #[ini(rename = "bargle")]
  |           ^^^^^^^^^^^^^^^^^
